# rpgcord

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  format.yml  lint.yml  type-check.yml
docs/: api.rst  conf.py  index.rst
locale/en-US/: characteristics.ftl  classes.ftl  cmds.ftl  registration.ftl
locale/ru/: characteristics.ftl  classes.ftl  registration.ftl
rpgcord/: __init__.py  __main__.py  bot.py  config example.py  config.example.py  database.py  maths.py  utils.py
rpgcord/data/: characteristic_data.py  class_data.py  custom_ids.py  registration_data.py
rpgcord/plugins/: register.py  startup.py
typings/asyncmy/: __init__.pyi  _scm_version.pyi  connection.pyi  cursors.pyi  log.pyi  pool.pyi  utils.pyi
typings/asyncmy/sa/: __init__.pyi  connection.pyi  engine.pyi  exc.pyi  result.pyi  transaction.pyi
