[project]
name = "rpgcord"
description = ""
authors = [ { name = "RPGcord Team" } ]
dependencies = [
    "disnake[speed]>=2.9.0",
    "aiomysql>=0.2.0",
    "loguru>=0.7.0",
    "disnake-ext-plugins @ git+https://github.com/LiTechO/disnake-ext-plugins@v0.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["pre-commit>=3.3.3"]
type-check = ["pyright>=1.1.323"]
lint = ["ruff>=0.0.285"]
format = ["yapf>=0.40.1"]
docs = [
    "Sphinx>=7.2.2",
    "sphinxcontrib-trio>=1.1.2",
    "sphinx-autobuild>=2021.3.14",
    "furo>=2023.8.19"
]

[tool.pdm.version]
source = "file"
path = "rpgcord/__init__.py"

[tool.pdm.scripts]
yapf = { composite = ["yapf rpgcord --recursive --in-place", "yapf docs --recursive --in-place"], help = "Run yapf" }
docs = { cmd = "sphinx-autobuild docs docs/_build/html", help = "Run Sphinx documentation server" }
lint = { cmd = "ruff ./rpgcord ./docs", help = "Run ruff" }
pyright = { cmd = "pyright rpgcord docs", help = "Run pyright" }
rpgcord = { cmd = "python -m rpgcord", help = "Run RPGcord" }

# Not intended for manual usage
yapf_check = { composite = ["yapf rpgcord --recursive --diff", "yapf docs --recursive --diff"] }
setup_env = { cmd = "pdm install -d -G:all", help = "Set up the local environment and all dependencies" }
post_setup_env = { cmd = "pre-commit install --install-hooks" }

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.yapf]
based_on_style = "pep8"
column_limit = 100
spaces_around_default_or_named_assign = true
spaces_around_dict_delimiters = true
spaces_before_comment = 2
split_before_dot = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["rpgcord/config.py"]

select = [
    "F",       # pyflakes
    "E", "W",  # pycodestyle
    "D2",      # pydocstyle, docstring formatting
    "D4",      # pydocstyle, docstring structure/content
    "ANN",     # flake8-annotations
    "ASYNC",   # flake8-async
    "S",       # flake8-bandit
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "PIE",     # flake8-pie
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TCH",     # flake8-type-checking
    # "PT",      # flake8-pytest-style
    "TD",      # flake8-todos
    # "FIX",     # flake8-fixme
    "ERA",     # eradicate
    "PGH",     # pygrep-hooks
    "PL",      # pylint
    "TRY",     # tryceratops
    "FLY",     # flynt
    "PERF",    # perflint
    "RUF",     # ruff
]

ignore = [
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
]

[tool.ruff.per-file-ignores]
"rpgcord/config.example.py" = ["S106"] # hardcoded passwords
